--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="app/assets/style.css">
-  <link rel="icon" href="">
-  <title>Vanilla JS SPA</title>
+  <link rel="icon" href="app/assets/wordpress.png">
+  <title>Vanilla JS SPA WordPress API</title>
 </head>
 
 <body>
